--- a/23_fd_TangyMango_caoT_howladerM/index.html
+++ b/23_fd_TangyMango_caoT_howladerM/index.html
@@ -19,7 +19,7 @@
           <li><a href="#grid">Grid</a></li>
           <li><a href="#forms">Forms</a></li
           <li><a href="#typography">Typography</a></li>
-          >
+
           <li><a href="#controls">Controls</a></li>
         </ul>
       </div>
@@ -121,7 +121,7 @@
 
 
       </pre></code>
-      <p><a href="https://foundation.zurb.com/sites/docs/forms.html">Click here for more information on forms!</a></p>
+      <p><a href="https://foundation.zurb.com/sites/docs/forms.html">More info on forms</a></p>
 
       <hr id="typography"> <br><br>
       <h1 class="text-center"> Typography </h1>
@@ -135,7 +135,6 @@
                 <h3>h3. Medium header.</h3>
                 <h4>h4. Moderate header.</h4>
                 <h5>h5. Small header.</h5>
-                <h6>h6. Tiny header.</h6>
                 <br>
                 <hr><br>
               </div>
@@ -145,11 +144,10 @@
                 <h3 class="subheader">h3. Medium subheader</h3>
                 <h4 class="subheader">h4. Moderate subheader</h4>
                 <h5 class="subheader">h5. Small subheader</h5>
-                <h6 class="subheader">h6. Tiny subheader</h6>
                 <br>
                 <hr><br>
               </div>
-              
+
 
             </div>
           </div>
@@ -175,12 +173,11 @@
 
         &lt;/div&gt;
       </pre></code>
-      <p><a href="https://foundation.zurb.com/sites/docs/typography-base.html">Click here for more information on typography!</a></p>
+      <p><a href="https://foundation.zurb.com/sites/docs/typography-base.html">More typography</a></p>
 
 
       <hr id="controls"><br><br>
       <h1 class="text-center">Controls</h1>
-      <p> Foundation controls include buttons, sliders(JavaScript), and switches.
         <div class="grid-x">
           <div class="cell medium-6">
             <div class="primary callout">
@@ -192,14 +189,7 @@
               <a class="button warning" href="#">Warning</a><br>
             </div>
           </div>
-          <div class="cell medium-6">
-            <div class="primary callout">
-              Button Actions:
-              <button type="button" class="success button">Save</button>
-              <button type="button" class="alert button">Delete</button>
-              <br>
-            </div>
-          </div>
+
         </div>
 
         <code style="width: 100%;background-color:orange;"><pre>
@@ -242,20 +232,6 @@
             &lt;/div&gt;
         </pre></code>
 
-        <div class="grid-x">
-          <div class="cell medium-12">
-            <div class="primary callout">
-              Disabled Buttons:
-              <a class="button disabled" href="#" aria-disabled>Disabled</a>
-              <button type="button" class="button primary" disabled>Disabled</button>
-              <button type="button" class="button secondary" disabled>Disabled</button>
-              <button type="button" class="button success" disabled>Disabled</button>
-              <button type="button" class="button alert" disabled>Disabled</button>
-              <button type="button" class="button warning" disabled>Disabled</button>
-              <br>
-            </div>
-          </div>
-        </div>
 
         <code style="width: 100%;background-color:orange;"><pre>
           &lt;div class="grid-x"&gt;
@@ -277,14 +253,7 @@
               </div>
             </div>
           </div>
-          <div class="cell medium-4">
-            <div class="primary callout" data-closable>
-              <button class="close-button" aria-label="Close alert" type="button" data-close>
-                <span aria-hidden="true">&times;</span>
-              </button>
-              <p>Look at this close button!<br> (Must use with plug-ins to actually close)</p>
-            </div>
-          </div>
+
           <div class="cell medium-4">
             <div class="primary callout">
               Switch
@@ -297,31 +266,10 @@
             </div>
           </div>
         </div>
-        <code style="width: 100%;background-color:orange;"><pre>
-    &lt;!-- Button Group--&gt;
-          &lt;div class="button-group"&gt;
-            &lt;a class="button"&gt;Small&lt;/a&gt;
-            &lt;a class="button"&gt;Button&lt;/a&gt;
-          &lt;/div&gt;
 
-    &lt;!-- Closed Button--&gt;
-          &lt;button class="close-button" aria-label="Close alert" type="button" data-close&gt;
-            &lt;span aria-hidden="true"&gt;&times;&lt;/span&gt;
-          &lt;/button&gt;
-
-    &lt;!-- Switch--&gt;
-          &lt;div class="switch"&gt;
-            &lt;input class="switch-input" id="exampleSwitch" type="checkbox" name="exampleSwitch"&gt;
-            &lt;label class="switch-paddle" for="exampleSwitch"&gt;
-              &lt;span class="show-for-sr"&gt;Download Kittens&lt;/span&gt;
-            &lt;/label&gt;
-          &lt;/div&gt;
-       </pre></code>
-       <p><a href="https://foundation.zurb.com/sites/docs/button.html">Click here for more information on controls!</a></p>
-       <hr>
 
        <div class="footer">
-         <div class="footer-copyright text-center py-3">Copyright &copy; 2018 Tania Cao Su & Mohtasim Howlader
+         <div class="footer-copyright">Copyright &copy; 2018 Tania Cao Su & Mohtasim Howlader
          </div>
        </div>
 
