--- a/23_fd_TangyMango_caoT_howladerM/index.html
+++ b/23_fd_TangyMango_caoT_howladerM/index.html
@@ -201,12 +201,7 @@
                 &lt;a class="button alert" href="#"&gt;Alert&lt;/a&gt;
             &lt;/div&gt;
             &lt;div class="cell medium-6"&gt;
-        &lt;!-- Button Actions: --&gt;
-                &lt;button type="button" class="success button"&gt;Save&lt;/button&gt;
-                &lt;button type="button" class="alert button"&gt;Delete&lt;/button&gt;
-                &lt;br&gt;
-            &lt;/div&gt;
-          &lt;/div&gt;
+
         </pre></code>
         <br>
         <div class="grid-x">
@@ -222,7 +217,7 @@
             </div>
           </div>
         </div>
-        <code style="width: 100%;background-color:orange;"><pre>
+        <code style="width: 100%;background-color:red;"><pre>
             &lt;div class="grid-x"&gt;
               &lt;div class="cell medium-12"&gt;
                   Button Sizes:
@@ -233,14 +228,6 @@
         </pre></code>
 
 
-        <code style="width: 100%;background-color:orange;"><pre>
-          &lt;div class="grid-x"&gt;
-            &lt;div class="cell medium-12"&gt;
-                &lt;button type="button" class="button primary" disabled&gt;Disabled&lt;/button&gt;
-                &lt;button type="button" class="button secondary" disabled&gt;Disabled&lt;/button&gt;
-            &lt;/div&gt;
-          &lt;/div&gt;
-        </pre></code>
 
         <div class="grid-x">
           <div class="cell medium-4">
